--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -127,7 +127,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/products">Products</a></li>
       <li><a href="/landingpage">Landing Page</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="/about">About (Target redirect to Landing Page)</a></li>
       <li><a href="https://github.com/johnsimmons-further/sst" target="_blank">GitHub</a></li>
     </ul>
   </nav>
