--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -49,8 +49,8 @@
     </div>
 
     <div style="margin-top: 2rem; display: flex; gap: 1rem; flex-wrap: wrap;">
-      <a href="https://experience.adobe.com/#/@searchdiscovery/target/activities" target="_blank" class="btn" style="background: #667eea; color: white; text-decoration: none;">
-        View Target Activities
+      <a href="https://experience.adobe.com/#/@searchdiscovery/target/activities/activity-details/ab_manual/647326/overview" target="_blank" class="btn" style="background: #667eea; color: white; text-decoration: none;">
+        View Target Activity
       </a>
       <a href="https://www5.an.adobe.com/spa/?linkId=85477733-35b5-4b93-af18-21938c3bc252&dpc=pnw" target="_blank" class="btn" style="background: #f5a623; color: white; text-decoration: none;">
         View Adobe Analytics A4T Dashboard
